--- a/site/app.css
+++ b/site/app.css
@@ -14,5 +14,5 @@ body{
 h1{
     font-size: 70px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color: wheat;
+    color: whitesmoke;
 }
